[package]
name = "bothan-api"
version = "0.0.1-beta.2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bothan-lib = { workspace = true }
bothan-core = { workspace = true }

bothan-binance = { workspace = true }
bothan-bitfinex = { workspace = true }
bothan-bybit = { workspace = true }
bothan-coinbase = { workspace = true }
bothan-coingecko = { workspace = true }
bothan-coinmarketcap = { workspace = true }
bothan-htx = { workspace = true }
bothan-kraken = { workspace = true }
bothan-okx = { workspace = true }

async-trait = { workspace = true }
dirs = { workspace = true }
prost = { workspace = true }
rust_decimal = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

config = "0.15.8"
